Synchronously send widget metrics.

Posting task may cause crash if application has no longer access to
shared sandbox on execution (suspended).

Bug: 780832
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: If5998414728ef4d8d3c61da3f9f6d5e705744b33
Reviewed-on: https://chromium-review.googlesource.com/758397
Reviewed-by: Elodie Banel <lod@chromium.org>
Reviewed-by: Eric Noyau <noyau@chromium.org>
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515157}
Former-commit-id: 6f705f8d0d16301158f3d782b382520969ce6048