ios/chrome/common/app_group/app_group_metrics_mainapp.h
@@ -17,18 +17,24 @@ typedef void (^ProceduralBlockWithData)(NSData*);
 // These methods must be called from the Chrome app.
 namespace main_app {
 
+// Send histograms reporting the usage of notification center metrics.
+void RecordWidgetUsage();
+
 // Iterates through the extensions pending logs and deletes them.
 // Calls |callback| on each log before deleting.
+// TODO(crbug.com/782685): remove function.
 void ProcessPendingLogs(ProceduralBlockWithData callback);
 
 // Enables the metrics collecting in extensions. The extensions will
 // use |clientID| as client ID, and |brandCode| as brand code in the logs.
+// TODO(crbug.com/782685): remove function.
 void EnableMetrics(NSString* client_id,
                    NSString* brand_code,
                    int64_t installDate,
                    int64_t enableMetricsDate);
 
-// Disabled the metrics collecting in extensions.
+// Disables the metrics collecting in extensions.
+// TODO(crbug.com/782685): remove function.
 void DisableMetrics();
 
 }  // namespace main_app
